force-app/main/default/objects/License_Registration__c/fields/Elevator_Constructor__c.field-meta.xml
<CustomField>
    <fullName>Elevator_Constructor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Elevator Constructor</label>
    <type>Checkbox</type>
</CustomField>