force-app/main/default/objects/License_Registration__c/fields/Employee_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Employee_Leasing__c</fullName>
    <inlineHelpText>Are you contracting with the employee leasing company as the employer?</inlineHelpText>
    <label>Contracting Employee Leasing Co?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>