force-app/main/default/objects/License_Registration__c/fields/Enter_Your_Name__c.field-meta.xml
<CustomField>
    <fullName>Enter_Your_Name__c</fullName>
    <inlineHelpText>The individual owner or any of the general partners may sign.  If business is a corporation or limited liability company, an authorized corporate officer or member may sign.  The name entered should match the full name on the individual&#39; driver&#39;s license.</inlineHelpText>
    <label>Enter Your Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>