force-app/main/default/objects/License_Registration__c/fields/Enter_Your_Name_Labor_Code__c.field-meta.xml
<CustomField>
    <fullName>Enter_Your_Name_Labor_Code__c</fullName>
    <inlineHelpText>Only the individual owner or a general partner may sign. If the business is a corporation or limited liability company, an authorized corporate officer or member may sign. The name entered must match the full name on the individual’s driver’s license.</inlineHelpText>
    <label>Enter Your Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>