force-app/main/default/objects/License_Registration__c/fields/Exam_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Expiration_Date__c</fullName>
    <description>Exam Expiration Date from Registration Eduction</description>
    <label>Exam Expiration Date</label>
    <summarizedField>Registration_Education__c.Exam_Expiration_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Registration_Education__c.Pass_Fail__c</field>
        <operation>equals</operation>
        <value>Pass</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Registration_Education__c.Exam_Expiration_Date__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Education__c.Registration__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>