force-app/main/default/objects/License_Registration__c/fields/Exam_Requirement_Language__c.field-meta.xml
<CustomField>
    <fullName>Exam_Requirement_Language__c</fullName>
    <formula>IF( Number_of_Exams_Required__c &gt; 0, 
CASE(  License_Registration_Type__c , 
&quot;Car Wash&quot;, &quot;A Car Wash exam is required. The exam fee is $100 for first-time business registrations and $50 for registration renewals. A representative from your company will need to complete the exam and pay the exam fee in order to obtain a license.&quot;, 
&quot;Farm Labor&quot;, &quot;A Farm Labor exam is required. The exam fee is $50. A representative from your company will need to complete the exam and pay the exam fee in order to obtain a license.&quot;,
&quot;No exams necessary at this time.&quot;),
&quot;No exams necessary at this time.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Requirements</label>
    <type>Text</type>
</CustomField>