force-app/main/default/objects/License_Registration__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration Date of the License/Registration</description>
    <inlineHelpText>Expiration Date of the License/Registration</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>