force-app/main/default/objects/License_Registration__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <description>Public Works</description>
    <label>Explanation</label>
    <type>TextArea</type>
</CustomField>