force-app/main/default/objects/License_Registration__c/fields/Federal_Employer_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_Employer_Identification_Number__c</fullName>
    <inlineHelpText>Please enter your 9-digit FEIN using only numbers.</inlineHelpText>
    <label>Federal Employer Identification Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>