force-app/main/default/objects/License_Registration__c/fields/Fee_Calculation_Error__c.field-meta.xml
<CustomField>
    <fullName>Fee_Calculation_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag set by fee calculation method when a creating a fee causes an error and can&#39;t be created.</description>
    <label>Fee Calculation Error</label>
    <type>Checkbox</type>
</CustomField>