force-app/main/default/objects/License_Registration__c/fields/Fee_Summary_ID__c.field-meta.xml
<CustomField>
    <fullName>Fee_Summary_ID__c</fullName>
    <description>Populated via DLRS - grabs the most recent fee summary record ID. Process builder populates it in Chargent Orders &amp; Manual Fee Payments when created by internal DIR users.</description>
    <label>Fee Summary ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>