force-app/main/default/objects/License_Registration__c/fields/FeesReviewed__c.field-meta.xml
<CustomField>
    <fullName>FeesReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fees Reviewed?</label>
    <type>Checkbox</type>
</CustomField>