force-app/main/default/objects/License_Registration__c/fields/General_Engineering__c.field-meta.xml
<CustomField>
    <fullName>General_Engineering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>General Engineering</label>
    <type>Checkbox</type>
</CustomField>