force-app/main/default/objects/License_Registration__c/fields/Good_standing_with_CA_Secretary_of_State__c.field-meta.xml
<CustomField>
    <fullName>Good_standing_with_CA_Secretary_of_State__c</fullName>
    <label>Good standing with CA Secretary of State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>