force-app/main/default/objects/License_Registration__c/fields/GPorJV__c.field-meta.xml
<CustomField>
    <fullName>GPorJV__c</fullName>
    <formula>IF(
RecordType.DeveloperName = &quot;Public_Works&quot;
&amp;&amp;
OR(
ISPICKVAL(Company_Type__c, &quot;General Partnership&quot;),
ISPICKVAL(Company_Type__c,  &quot;Joint Venture&quot;)),
true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP or JV</label>
    <type>Checkbox</type>
</CustomField>