force-app/main/default/objects/License_Registration__c/fields/I_Acknowledge_Labor_Code_Compliance__c.field-meta.xml
<CustomField>
    <fullName>I_Acknowledge_Labor_Code_Compliance__c</fullName>
    <inlineHelpText>You must acknowledge labor code compliance to successfully submit registration.</inlineHelpText>
    <label>I Acknowledge Labor Code Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>