force-app/main/default/objects/License_Registration__c/fields/I_Agree__c.field-meta.xml
<CustomField>
    <fullName>I_Agree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Must be checked to submit form.</description>
    <inlineHelpText>Check here to confirm acknowledgement and agreement with the disclaimer above.</inlineHelpText>
    <label>I Agree</label>
    <type>Checkbox</type>
</CustomField>