force-app/main/default/objects/License_Registration__c/fields/Insurance_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier__c</fullName>
    <description>Field to capture the name of Insurer for applicable License/Registration types (i.e. Worker&#39;s Compensation Insurance)</description>
    <inlineHelpText>If license/registration requires bond, enter insurance company name if known</inlineHelpText>
    <label>Insurance Carrier</label>
    <length>125</length>
    <type>Text</type>
</CustomField>