force-app/main/default/objects/License_Registration__c/fields/is60DaysFromExpiration__c.field-meta.xml
<CustomField>
    <fullName>is60DaysFromExpiration__c</fullName>
    <description>Check if the registration is within 60 days of expiring</description>
    <formula>IF(ISBLANK(Expiration_Date__c), 0, IF( Expiration_Date__c - 60 &gt; Today(), 0, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is60DaysFromExpiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>