force-app/main/default/objects/License_Registration__c/fields/isConvicted__c.field-meta.xml
<CustomField>
    <fullName>isConvicted__c</fullName>
    <inlineHelpText>Select &#39;Yes&#39; or &quot;No&#39; from the drop down list</inlineHelpText>
    <label>isConvicted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>