force-app/main/default/objects/License_Registration__c/fields/isNewRegistration__c.field-meta.xml
<CustomField>
    <fullName>isNewRegistration__c</fullName>
    <formula>if(ISPICKVAL(Service_Type__c, &quot;New&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isNewRegistration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>