force-app/main/default/objects/License_Registration__c/fields/isSkipMedicalComponent__c.field-meta.xml
<CustomField>
    <fullName>isSkipMedicalComponent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by VIP Form Tool to hide or display the Medical Information component.
Field is updated by LicenseRegistrationAllHandler before update trigger.</description>
    <label>isSkipMedicalComponent</label>
    <type>Checkbox</type>
</CustomField>