force-app/main/default/objects/License_Registration__c/fields/Laborer__c.field-meta.xml
<CustomField>
    <fullName>Laborer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Laborer</label>
    <type>Checkbox</type>
</CustomField>