force-app/main/default/objects/License_Registration__c/fields/Landscape__c.field-meta.xml
<CustomField>
    <fullName>Landscape__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Landscape</label>
    <type>Checkbox</type>
</CustomField>