force-app/main/default/objects/License_Registration__c/fields/Lease_Through_PEO__c.field-meta.xml
<CustomField>
    <fullName>Lease_Through_PEO__c</fullName>
    <description>Public Works</description>
    <inlineHelpText>A PEO is a firm that contracts with employers to provide services that include human resources, payroll and employee benefits.</inlineHelpText>
    <label>Lease Through PEO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>