force-app/main/default/objects/License_Registration__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <inlineHelpText>Please enter the same business name as is registered with the CA Secretary of State. For sole proprietorship the Contractor Legal Name must match the full name on driver’s license.</inlineHelpText>
    <label>Legal Entity Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>