force-app/main/default/objects/License_Registration__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <externalId>true</externalId>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>