force-app/main/default/objects/License_Registration__c/fields/License_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Registration_Number__c</fullName>
    <description>Number that Corresponds to the License/Registration</description>
    <inlineHelpText>Number that Corresponds to the License/Registration</inlineHelpText>
    <label>License/Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>