force-app/main/default/objects/License_Registration__c/fields/License_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Registration_Type__c</fullName>
    <label>License/Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>Agricultural Employers of Minors</fullName>
            </value>
            <value>
                <fullName>Agricultural Produce Unloaders</fullName>
            </value>
            <value>
                <fullName>BOE/Seller’s Permit</fullName>
            </value>
            <value>
                <fullName>Bureau of Automotive Repair</fullName>
            </value>
            <value>
                <fullName>Business License</fullName>
            </value>
            <value>
                <fullName>Car Wash</fullName>
            </value>
            <value>
                <fullName>Child Performer Services</fullName>
            </value>
            <value>
                <fullName>CSLB</fullName>
            </value>
            <value>
                <fullName>DOL</fullName>
            </value>
            <value>
                <fullName>DSS Facility</fullName>
            </value>
            <value>
                <fullName>Electricians and electrician trainees</fullName>
            </value>
            <value>
                <fullName>FBNS</fullName>
            </value>
            <value>
                <fullName>FLC</fullName>
            </value>
            <value>
                <fullName>Garment Registration</fullName>
            </value>
            <value>
                <fullName>Health Permit</fullName>
            </value>
            <value>
                <fullName>Industrial Homeworker Permit</fullName>
            </value>
            <value>
                <fullName>Industrial Homeworkers</fullName>
            </value>
            <value>
                <fullName>Industrial Homework License</fullName>
            </value>
            <value>
                <fullName>Janitorial</fullName>
            </value>
            <value>
                <fullName>Secretary of State Number</fullName>
            </value>
            <value>
                <fullName>SEIN</fullName>
            </value>
            <value>
                <fullName>Sheltered Workshops (non‐profit)</fullName>
            </value>
            <value>
                <fullName>Special Minimum Wage</fullName>
            </value>
            <value>
                <fullName>Studio Teacher Certification</fullName>
            </value>
            <value>
                <fullName>Talent Agency</fullName>
            </value>
            <value>
                <fullName>Work Permits for Child Performers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>BSIS</fullName>
            </value>
            <value>
                <fullName>Public Works</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>